ecmascript/parser/tests/test262-error-references/fail/6f7a5e4988b7d758.js.stderr
error: Expected ;, got numeric literal
 --> $DIR/tests/test262-parser/fail/6f7a5e4988b7d758.js:1:12
  |
1 | for(let of 0);
  |            ^

